# StaticGalleryBuilder

./: .gitignore  .gitmodules  .hintrc  .python-version  Makefile  README.md  StaticGalleryBuilder.code-workspace  build.spec  builder.py  cclicense.py  example.config  generate-html.py  generate_html.old.py  generate_html.py  generate_previews.py  hl_config.yaml  pyproject.toml  requirements.txt  simple-picture-server.code-workspace  static_gallery_website_builder.py  view-latest-log.sh  view-logs.sh
.github/workflows/: build-release.yml  pylint.yml  release-on-version-bump.yml
files/: default-dark.css  default.css  global.css  monokai-vibrant.css
files/pswp/: photoswipe.css  photoswipe.min.js
files/pswp/default-skin/: default-skin.css
modules/: argumentparser.py  cclicense.py  css_color.py  generate_html.py  logger.py  svg_handling.py
modules/datatypes/: metadata.py
src/staticgallerybuilder/: main.py
src/staticgallerybuilder/files/pswp/: photoswipe.js
src/staticgallerybuilder/files/pswp/default-skin/: default-skin.css
src/staticgallerybuilder/modules/: argumentparser.py  css_color.py  generate_html.py  logger.py  svg_handling.py  util.py
src/staticgallerybuilder/modules/datatypes/: metadata.py
src/staticgallerybuilder/templates/: default-dark.css  default.css  folder-2.svg.j2  manifest.webmanifest.j2
templates/: default.css  functionality.js  icon.svg.j2  index.html.j2  license.html.j2  manifest.json.j2
test/example/: 000041900001.jpg.xmp  DSC00009.jpg.xmp  DSC01106.jpg.xmp  DSC03470.JPG.xmp  DSC03508.ARW.xmp  DSC03508.JPG.xmp  example.jpg.xmp  example.tif.xmp  info  license.html  sizelist.json
test/example/subfolder/: DSC01106.jpg.xmp
test/example/subfolder/subsubfolder/: 000041900001.jpg.xmp  000041900001.tif.xmp
test/example/subfolder/subsubfolder (now with symbols)/: Zoë J. (ZFL).jpg.xmp
themes/: README.md  alpenglow-dark.css  alpenglow.css  aritim-dark.css  aritim.css  autumn.css  carnation.css  catpuccin.css  cornflower.css  default-dark.css  default.css  generate_preview.py  index.html  ivy.css  kjoe.css  monokai-vibrant.css  rainbow.css  spring.css  steam.css  summer.css  sunflower.css  winter.css
themes/icons/: catpuccin.svg.j2  folder-1.svg.j2  folder-3.svg.j2  folder-papirus.svg.j2  subfolder.svg.j2
